nodejs-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeappdeployment
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  selector:
    matchLabels:
      app: nodewebapp
  template:
    metadata:
      labels:
        app: nodewebapp
    spec:
      containers:
      - name: nodewebappcontainer
        image: dockerhandson/node-web-app:1
        imagePullPolicy: Always
        imagePullSecrets:
        - name: privatereposecret
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
        resources:
          limits:
            cpu: 300m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
