nodejs-service.yml
---
# NodePort service is used only to demonstrate the hello world application
# Best practice is to use ingress service.
kind: Service
apiVersion: v1
metadata:
  name: nodewebappservice
spec:
  type: NodePort
  selector:
    app: nodewebapp
  ports:
    - port: 8080
      targetPort: 8080
